# ziro

./: .clippy.toml  .npmignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.en.md  README.md  README.zh.md  package.json
.github/workflows/: ci.yml  release.yml
docs/en/: 01-installation.md  02-usage.md  03-development.md  04-contributing.md
docs/superpowers/plans/: 2026-04-18-release-automation.md
docs/superpowers/specs/: 2026-04-16-windows-file-lock-retry-design.md  2026-04-18-release-automation-design.md
docs/zh/: 01-installation.md  02-usage.md  03-development.md  04-contributing.md
scripts/: detect-platform.js  install.js
src/: cli.rs  file.rs  icons.rs  lib.rs  main.rs  port.rs  process.rs  term.rs  theme.rs  top.rs  ui.rs
src/cli/: args.rs  handlers.rs  mod.rs
src/core/: mod.rs
src/core/fs_ops/: mod.rs
src/core/port/: mod.rs
src/core/process/: encoding.rs  lock.rs  mod.rs
src/core/top/: mod.rs
src/platform/: encoding.rs  mod.rs  term.rs
src/ui/: icons.rs  mod.rs  render.rs  theme.rs
src/ui/render/: file_ops.rs  mod.rs  port.rs  top.rs
