[package]
name = "ziro"
version = "0.0.13"
edition = "2024"
authors = ["huangshan"]
description = "跨平台端口管理工具 - 快速查找和终止占用端口的进程"
repository = "https://github.com/Protagonistss/ziro"
license = "MIT"
keywords = ["port", "process", "network", "cli", "cross-platform"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    "target/",
    ".git/",
    ".github/",
    "*.log"
]

[[bin]]
name = "ziro"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.31"
inquire = "0.7"
anyhow = "1.0"
colored = "2.1"
console = "0.15"
